!conf: javac evaluates from running instanse home, if not defined or invalid !ant: drop failing arguments: hashorn rise exception on unrecognised args, so script cant runs